[fix] overflow visible en data-tip para que el bubble no sea recortado

--- a/static/style.css
+++ b/static/style.css
@@ -709,6 +709,7 @@ pre.log {
 [data-tip] {
   position: relative;
   cursor: help;
+  overflow: visible !important;
 }
 [data-tip]::after {
   content: attr(data-tip);
